Finalizando el Proyecto

--- a/index.html
+++ b/index.html
@@ -92,5 +92,32 @@
       </aside>
     </div>
     <!-- / contenido -->
+
+    <!-- footer -->
+    <footer class="footer-site">
+      <div class="container clearfix">
+        <section class="us">
+          <h2>Sobre Nosotros</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            consequuntur aut neque alias dolores in adipisci.
+          </p>
+        </section>
+        <section class="menu">
+          <h2>Menú de Navegación</h2>
+          <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Blog</a>
+            <a href="#">Tienda</a>
+            <a href="#">Contacto</a>
+          </nav>
+        </section>
+      </div>
+      <p class="copyright">
+        BlogdeViajes - Todos los derechos Reservados 2020 &copy;
+      </p>
+    </footer>
+    <!-- /footer -->
   </body>
 </html>
